Issue #1 - Update the documentation with the new functionality to export to PDF